# KLaTsL

./: .gitignore  KLaTsL.opam  Makefile  README.MD  dune-project
_build/: .db  .digest-db  dune  log
_build/default/: KLaTsL.dune-package  KLaTsL.opam  META.KLaTsL  META.MaTriX  MaTriX.dune-package  MaTriX.install
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: ast.ml  eval.ml  klatsl.ml-gen  matrix.cma  matrix.cmxa  matrix.cmxs  matrix.ml-gen
_build/default/src/.klatsl.objs/: klatsl__Eval.impl.all-deps  klatsl__Eval.impl.d
_build/default/src/.klatsl.objs/byte/: klatsl.cmi  klatsl.cmo  klatsl.cmt  klatsl__Ast.cmi  klatsl__Ast.cmo  klatsl__Ast.cmt  klatsl__Eval.cmi  klatsl__Eval.cmt  klatsl__Eval.cmti
_build/default/src/.klatsl.objs/native/: klatsl.cmx  klatsl__Ast.cmx
_build/default/src/.matrix.objs/: matrix__Eval.intf.all-deps
_build/default/src/.matrix.objs/byte/: matrix.cmi  matrix.cmo  matrix.cmt  matrix__Ast.cmi  matrix__Ast.cmo  matrix__Ast.cmt  matrix__Eval.cmi  matrix__Eval.cmti
_build/default/src/.matrix.objs/native/: matrix.cmx  matrix__Ast.cmx
_build/default/src/.merlin-conf/: lib-KLaTsL  lib-MaTriX
_build/default/test/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/test/.merlin-conf/: exe-main
_build/install/default/lib/KLaTsL/: META  dune-package  klatsl.cmi  klatsl.cmt  klatsl.cmx  klatsl.ml  klatsl__Ast.cmi  klatsl__Ast.cmt  klatsl__Ast.cmx  klatsl__Eval.cmi  klatsl__Eval.cmti  (+1 more)
src/: ast.ml  dune  eval.ml  eval.mli  lexer.mll  make.ml  parser.mly  typecheck.ml  uop.ml
test/: dune  example_prog.txt
(+15 files in other folders)
