(lang dune 3.14)

(name KLaTsL)

(generate_opam_files true)

(source
 (github KabirSamsi/KLaTsL))

(authors "Kabir Samsi")

(maintainers "Kabir Samsi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name KLaTsL)
 (synopsis "LinAlg Interpreter!")
 (description "Linear algebra language interpreter and typesetting framework allowing to write, typeset and create programs to solve linear algebra problems and compile solutions to LaTeX.")
 (depends ocaml dune)
 (tags
  (some placeholders)))

